--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <audio id="drumAudio" src="amen-break-no-copyright-remake-120bpm-25924.mp3"></audio>
 
   <div class="footer-logo">
-    <img src="LM logo.jpg" alt="Long & McQuade Logo">
+    <img src="idwCtGoCCx_1751586432621.png" alt="Long & McQuade Logo Transparent">
   </div>
 </body>
 </html>
