--- a/index.html
+++ b/index.html
@@ -8,49 +8,51 @@
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-      padding: 2em;
-      background-color: #194377;
-      color: white;
-    }
-    img {
-      max-width: 90%;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-    }
-    .button {
-      margin-top: 1.5em;
-      padding: 12px 24px;
-      font-size: 18px;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      background: #ffffff;
-      color: #194377;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s, color 0.3s;
-    }
-    .button:hover {
-      background: #f0f0f0;
-      color: #111;
-    }
-    .footer-logo {
-      margin-top: 3em;
-      opacity: 0.9;
-    }
-    .footer-logo img {
-      width: 140px;
-      height: auto;
-    }
-    em {
-      color: #d1d1d1;
-    }
-  </style>
+ <style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 2em;
+    background-color: #194377;
+    color: white;
+  }
+  img {
+    max-width: 90%;
+    height: auto;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  }
+  .button {
+    margin-top: 1.5em;
+    padding: 12px 24px;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    background: #ffffff;
+    color: #194377;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s, color 0.3s;
+  }
+  .button:hover {
+    background: #f0f0f0;
+    color: #111;
+  }
+  .footer-logo {
+    margin-top: 3em;
+    opacity: 1;
+  }
+  .footer-logo img {
+    width: 240px;
+    height: auto;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  em {
+    color: #d1d1d1;
+  }
+</style>
 </head>
 <body>
   <h1>View Drum Kit in Augmented Reality (AR)</h1>
