--- a/index.html
+++ b/index.html
@@ -8,51 +8,55 @@
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
- <style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    padding: 2em;
-    background-color: #194377;
-    color: white;
-  }
-  img {
-    max-width: 90%;
-    height: auto;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
-  }
-  .button {
-    margin-top: 1.5em;
-    padding: 12px 24px;
-    font-size: 18px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    background: #ffffff;
-    color: #194377;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background 0.3s, color 0.3s;
-  }
-  .button:hover {
-    background: #f0f0f0;
-    color: #111;
-  }
-  .footer-logo {
-    margin-top: 3em;
-    opacity: 1;
-  }
-  .footer-logo img {
-    width: 240px;
-    height: auto;
-    border-radius: 0;
-    box-shadow: none;
-  }
-  em {
-    color: #d1d1d1;
-  }
-</style>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      padding: 2em;
+      background-color: #194377;
+      color: white;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    }
+    .button-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 1.5em;
+    }
+    .button {
+      padding: 12px 24px;
+      font-size: 18px;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      background: #ffffff;
+      color: #194377;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s, color 0.3s;
+    }
+    .button:hover {
+      background: #f0f0f0;
+      color: #111;
+    }
+    .footer-logo {
+      margin-top: 3em;
+      opacity: 1;
+    }
+    .footer-logo img {
+      width: 240px;
+      height: auto;
+      border-radius: 0;
+      box-shadow: none;
+    }
+    em {
+      color: #d1d1d1;
+    }
+  </style>
 </head>
 <body>
   <h1>View Drum Kit in Augmented Reality (AR)</h1>
@@ -62,11 +66,11 @@
     <img src="drumkit.jpg" alt="Drum Kit Preview">
   </a>
 
-  <button class="button" onclick="document.getElementById('drumAudio').play()">🥁 Play Drum Loop</button>
+  <div class="button-container">
+    <button class="button" onclick="window.open('video-promo.mp4', '_blank')">🎬 See it on stage!</button>
+  </div>
 
   <p><em>Best viewed on iPhone or iPad using Safari</em></p>
-
-  <audio id="drumAudio" src="amen-break-no-copyright-remake-120bpm-25924.mp3"></audio>
 
   <div class="footer-logo">
     <img src="idwCtGoCCx_1751586432621.png" alt="Long & McQuade Logo Transparent">
