--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
     <img src="drumkit.jpg" alt="Drum Kit Preview">
   </a>
 
+  <p style="margin-top: 2em; font-size: 16px;">
+    Got 2 metres of space? That’s your kit zone. Tap to place — you’re ready to rock!<br>
+    <em>Best viewed on iPhone or iPad using Safari.</em>
+  </p>
+
   <div class="button-container">
     <button class="button" onclick="window.open('video-promo.mp4', '_blank')">🎬 See it on stage!</button>
   </div>
-
-  <p><em>Best viewed on iPhone or iPad using Safari</em></p>
 
   <div class="footer-logo">
     <img src="idwCtGoCCx_1751586432621.png" alt="Long & McQuade Logo Transparent">
