--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   </a>
 
   <p style="margin-top: 2em; font-size: 16px;">
-    Got 2 metres of space? That’s your kit zone. Tap to place!<br>
-    <em>Best viewed on iPhone or iPad using Safari.</em>
+    Got 2 metres of space? That’s your kit zone. Tap to place!<br> <em>Best viewed on iPhone or iPad using Safari.</em>
   </p>
 
   <div class="button-container">
